del tag && task in add tag
